Add showTasksList - Task API
