# app/Http/Controllers/SessionController.php
@@ -8,11 +8,14 @@ use App\Models\Projects;
 use App\Models\Projects_Users;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
+use Carbon\Carbon;
+use Illuminate\Contracts\Session\Session;
 
 class SessionController extends Controller
 {
-  private function checkTokenAndKey($request){
-      //Select USerID from token
+  private function checkTokenAndKey($request)
+  {
+    //Select USerID from token
     $User_id = Users::where('token', '=', $request->token)->select('id', 'username')->first();
     //If Token USer does not exist -> return false log.
     if ($User_id == null) {
@@ -33,14 +36,14 @@ class SessionController extends Controller
       );
     }
     $Project_id = $Project_id->id;
-    return Array(
+    return array(
       'User_id' => $User_id,
       'Username' => $User_username,
       'Project_id' => $Project_id,
     );
   }
   /**
-   * * add project
+   * * add Session
    * @param Request $request
    */
   public function add(Request $request)
@@ -87,7 +90,7 @@ class SessionController extends Controller
     }
   }
   /**
-   * * edit project
+   * * edit Session
    * @param Request $request
    */
   public function edit(Request $request)
@@ -128,6 +131,7 @@ class SessionController extends Controller
           422
         );
       }
+      $editSession->updated_at = Carbon::now();
       $editSession->name = $request->name;
       $editSession->save();
       return "Successful";
@@ -141,7 +145,7 @@ class SessionController extends Controller
     }
   }
   /**
-   * * delete project
+   * * delete Session
    * @param Request $request
    */
   public function delete(Request $request)
@@ -192,6 +196,50 @@ class SessionController extends Controller
       );
     }
   }
+   /**
+   * * show Sessions List
+   * @param Request $request
+   */
+  public function showSessionsList(Request $request)
+  {
+    //Validate request is right format input.
+    $validator = Validator::make(
+      $request->all(),
+      [
+        'key'                => 'required|string',
+        'token'              => 'required|string'
+      ]
+    );
+    if ($validator->fails()) {
+      return response()->json(
+        [$validator->errors()],
+        422
+      );
+    }
+    //Check Key and Token from DB
+    $resultCheck = $this->checkTokenAndKey($request);
+    $User_id = $resultCheck['User_id'];
+    $Project_id = $resultCheck['Project_id'];
+    $Username = $resultCheck['Username'];
+    //Check User is in Project  
+    $Project_Owner_check = Projects_Users::where('idUser', '=', $User_id)
+      ->where('idProject', '=', $Project_id)
+      ->select('Type')
+      ->first();
+    //Case the user has joined the project
+    if ($Project_Owner_check != null) {
+      $Sessions_List = Sessions::where('idProject','=',$Project_id)
+      ->get();
+      return $Sessions_List;
+    }
+    //Case the user does not have joined the project
+    else {
+      return response()->json(
+        $Username . " does not have joined the project",
+        422
+      );
+    }
+  }
 
   /**
    * * This is function add session swagger
@@ -220,7 +268,7 @@ class SessionController extends Controller
    *         name="name",
    *         in="query",
    *         type="string",
-   *         description="Enter name session:",
+   *         description="Enter name Session:",
    *         required=true,
    *     ),
    *     @SWG\Response(
@@ -238,7 +286,7 @@ class SessionController extends Controller
    * * This is function edit session swagger
    * todo: Show edit session Document 
    */
-    /**
+  /**
    * @SWG\POST(
    *     path="/api/session/edit",
    *     description="edit Session",
@@ -283,13 +331,13 @@ class SessionController extends Controller
    */
 
   /**
-   * * This is function delete session swagger
+   * * This is function show delete list swagger
    * todo: Show delete session Document 
    */
   /**
    * @SWG\POST(
    *     path="/api/session/delete",
-   *     description="edit Session",
+   *     description="delete Session",
    *     tags={"Session"},
    *     @SWG\Parameter(
    *         name="token",
@@ -310,6 +358,39 @@ class SessionController extends Controller
    *         in="query",
    *         type="number",
    *         description="Enter session ID:",
+   *         required=true,
+   *     ),
+   *     @SWG\Response(
+   *         response=200,
+   *         description="Successful.",
+   *     ),
+   *     @SWG\Response(
+   *         response=422,
+   *         description="Missing Data or Data is incorrect."
+   *     )
+   * )
+   */
+  /**
+   * * This is function show sessions list swagger
+   * todo: Show sessions list Document 
+   */
+  /**
+   * @SWG\GET(
+   *     path="/api/session/showSessionsList",
+   *     description="show Sessions List",
+   *     tags={"Session"},
+   *     @SWG\Parameter(
+   *         name="token",
+   *         in="query",
+   *         type="string",
+   *         description="Enter your token when you logged in:",
+   *         required=true,
+   *     ),
+   *     @SWG\Parameter(
+   *         name="key",
+   *         in="query",
+   *         type="string",
+   *         description="Enter key project get from showProjectsList api:",
    *         required=true,
    *     ),
    *     @SWG\Response(
