# app/Http/Controllers/TaskController.php
@@ -12,8 +12,9 @@ use Illuminate\Support\Facades\Validator;
 
 class TaskController extends Controller
 {
-  private function checkTokenAndKey($request){
-      //Select USerID from token
+  private function checkTokenAndKey($request)
+  {
+    //Select USerID from token
     $User_id = Users::where('token', '=', $request->token)->select('id', 'username')->first();
     //If Token USer does not exist -> return false log.
     if ($User_id == null) {
@@ -34,7 +35,7 @@ class TaskController extends Controller
       );
     }
     $Project_id = $Project_id->id;
-    return Array(
+    return array(
       'User_id' => $User_id,
       'Username' => $User_username,
       'Project_id' => $Project_id,
@@ -74,13 +75,15 @@ class TaskController extends Controller
       ->where('idProject', '=', $Project_id)
       ->select('Type')
       ->first();
-      return "Successful";
     //Case the user has joined the project
     if ($Project_Owner_check != null) {
-      $addSession = new Sessions();
-      $addSession->name = $request->name;
-      $addSession->idProject = $Project_id;
-      $addSession->save();
+      //Add Task to Database
+      $addTask = new Tasks();
+      $addTask->title = $request->title;
+      $addTask->description = $request->description;
+      $addTask->idSession = $request->SessionId;
+      $addTask->urlAvatar = $request->urlAvatar;
+      $addTask->save();
       return "Successful";
     }
     //Case the user does not have joined the project
@@ -101,10 +104,13 @@ class TaskController extends Controller
     $validator = Validator::make(
       $request->all(),
       [
-        'SessionId'          => 'required|string',
         'key'                => 'required|string',
         'token'              => 'required|string',
-        'name'               => 'required|string',
+        'TaskId'             => 'required|numeric',
+        'title'              => 'required|string',
+        'description'        => 'sometimes|string|nullable',
+        'SessionId'          => 'required|numeric',
+        'urlAvatar'          => 'sometimes|string|nullable',
       ]
     );
     if ($validator->fails()) {
@@ -125,16 +131,19 @@ class TaskController extends Controller
       ->first();
     //Case the user has joined the project
     if ($Project_Owner_check != null) {
-      $editSession = Sessions::find($request->SessionId);
-      //Check SessionId exist from Session Table DB
-      if ($editSession == null) {
+      //Add Task to Database
+      $editTask = Tasks::find($request->TaskId);
+      if ($editTask == null) {
         return response()->json(
-          "SessionId does not exist.",
+          "Task does not exist.",
           422
         );
       }
-      $editSession->name = $request->name;
-      $editSession->save();
+      $editTask->title = $request->title;
+      $editTask->description = $request->description;
+      $editTask->idSession = $request->SessionId;
+      $editTask->urlAvatar = $request->urlAvatar;
+      $editTask->save();
       return "Successful";
     }
     //Case the user does not have joined the project
@@ -155,9 +164,9 @@ class TaskController extends Controller
     $validator = Validator::make(
       $request->all(),
       [
-        'SessionId'          => 'required|string',
         'key'                => 'required|string',
-        'token'              => 'required|string'
+        'token'              => 'required|string',
+        'TaskId'             => 'required|numeric'
       ]
     );
     if ($validator->fails()) {
@@ -178,16 +187,61 @@ class TaskController extends Controller
       ->first();
     //Case the user has joined the project
     if ($Project_Owner_check != null) {
-      $deleteSession = Sessions::find($request->SessionId);
-      //Check SessionId exist from Session Table DB
-      if ($deleteSession == null) {
+      //Add Task to Database
+      $deleteTask = Tasks::find($request->TaskId);
+      if ($deleteTask == null) {
         return response()->json(
-          "SessionId does not exist.",
+          "Task does not exist.",
           422
         );
       }
-      $deleteSession->delete();
+      $deleteTask->delete();
       return "Successful";
+    }
+    //Case the user does not have joined the project
+    else {
+      return response()->json(
+        $Username . " does not have joined the project",
+        422
+      );
+    }
+  }
+  /**
+   * * show Tasks List
+   * @param Request $request
+   */
+  public function showTasksList(Request $request)
+  {
+    //Validate request is right format input.
+    $validator = Validator::make(
+      $request->all(),
+      [
+        'key'                => 'required|string',
+        'token'              => 'required|string',
+        'SessionId'          => 'required|numeric'
+      ]
+    );
+    if ($validator->fails()) {
+      return response()->json(
+        [$validator->errors()],
+        422
+      );
+    }
+    //Check Key and Token from DB
+    $resultCheck = $this->checkTokenAndKey($request);
+    $User_id = $resultCheck['User_id'];
+    $Project_id = $resultCheck['Project_id'];
+    $Username = $resultCheck['Username'];
+    //Check User is in Project  
+    $Project_Owner_check = Projects_Users::where('idUser', '=', $User_id)
+      ->where('idProject', '=', $Project_id)
+      ->select('Type')
+      ->first();
+    //Case the user has joined the project
+    if ($Project_Owner_check != null) {
+      $Tasks_List = Tasks::where('idSession', '=', $request->SessionId)
+        ->get();
+      return $Tasks_List;
     }
     //Case the user does not have joined the project
     else {
@@ -199,14 +253,14 @@ class TaskController extends Controller
   }
 
   /**
-   * * This is function add session swagger
-   * todo: Show add session Document 
+   * * This is function add task swagger
+   * todo: Show add task Document 
    */
   /**
    * @SWG\POST(
-   *     path="/api/session/add",
-   *     description="add Session",
-   *     tags={"Session"},
+   *     path="/api/task/add",
+   *     description="add task",
+   *     tags={"Task"},
    *     @SWG\Parameter(
    *         name="token",
    *         in="query",
@@ -221,12 +275,31 @@ class TaskController extends Controller
    *         description="Enter key project get from showProjectsList api:",
    *         required=true,
    *     ),
+   *      @SWG\Parameter(
+   *         name="SessionId",
+   *         in="query",
+   *         type="number",
+   *         description="Enter SessionId:",
+   *         required=true,
+   *     ),
    *     @SWG\Parameter(
-   *         name="name",
+   *         name="title",
    *         in="query",
    *         type="string",
-   *         description="Enter name session:",
+   *         description="Enter Title Task:",
    *         required=true,
+   *     ),
+   *     @SWG\Parameter(
+   *         name="description",
+   *         in="query",
+   *         type="string",
+   *         description="Enter description:"
+   *     ),
+   *     @SWG\Parameter(
+   *         name="urlAvatar",
+   *         in="query",
+   *         type="string",
+   *         description="Enter urlAvatar:"
    *     ),
    *     @SWG\Response(
    *         response=200,
@@ -240,21 +313,14 @@ class TaskController extends Controller
    */
 
   /**
-   * * This is function edit session swagger
-   * todo: Show edit session Document 
+   * * This is function edit task swagger
+   * todo: Show edit task Document 
    */
-    /**
+  /**
    * @SWG\POST(
-   *     path="/api/session/edit",
-   *     description="edit Session",
-   *     tags={"Session"},
-   *     @SWG\Parameter(
-   *         name="SessionId",
-   *         in="query",
-   *         type="number",
-   *         description="Enter session ID:",
-   *         required=true,
-   *     ),
+   *     path="/api/task/edit",
+   *     description="edit task",
+   *     tags={"Task"},
    *     @SWG\Parameter(
    *         name="token",
    *         in="query",
@@ -270,11 +336,38 @@ class TaskController extends Controller
    *         required=true,
    *     ),
    *     @SWG\Parameter(
-   *         name="name",
+   *         name="SessionId",
+   *         in="query",
+   *         type="number",
+   *         description="Enter SessionId:",
+   *         required=true,
+   *     ),
+   *     @SWG\Parameter(
+   *         name="TaskId",
+   *         in="query",
+   *         type="number",
+   *         description="Enter TaskId:",
+   *         required=true,
+   *     ),
+   *     @SWG\Parameter(
+   *         name="title",
    *         in="query",
    *         type="string",
-   *         description="Enter name session:",
+   *         description="Enter Title Task:",
    *         required=true,
+   *     ),
+   *     @SWG\Parameter(
+   *         name="description",
+   *         in="query",
+   *         type="string",
+   *         description="Enter description:",
+   * 
+   *     ),
+   *     @SWG\Parameter(
+   *         name="urlAvatar",
+   *         in="query",
+   *         type="string",
+   *         description="Enter urlAvatar:",
    *     ),
    *     @SWG\Response(
    *         response=200,
@@ -289,13 +382,54 @@ class TaskController extends Controller
 
   /**
    * * This is function delete session swagger
-   * todo: Show delete session Document 
+   * todo: Show delete task Document 
    */
   /**
    * @SWG\POST(
-   *     path="/api/session/delete",
-   *     description="edit Session",
-   *     tags={"Session"},
+   *     path="/api/task/delete",
+   *     description="delete task",
+   *     tags={"Task"},
+   *     @SWG\Parameter(
+   *         name="token",
+   *         in="query",
+   *         type="string",
+   *         description="Enter your token when you logged in:",
+   *         required=true,
+   *     ),
+   *     @SWG\Parameter(
+   *         name="key",
+   *         in="query",
+   *         type="string",
+   *         description="Enter key project get from showProjectsList api:",
+   *         required=true,
+   *     ),
+   *     @SWG\Parameter(
+   *         name="TaskId",
+   *         in="query",
+   *         type="number",
+   *         description="Enter Task ID:",
+   *         required=true,
+   *     ),
+   *     @SWG\Response(
+   *         response=200,
+   *         description="Successful.",
+   *     ),
+   *     @SWG\Response(
+   *         response=422,
+   *         description="Missing Data or Data is incorrect."
+   *     )
+   * )
+   */
+
+   /**
+   * * This is function show Tasks list swagger
+   * todo: Show Task list Document 
+   */
+  /**
+   * @SWG\GET(
+   *     path="/api/task/showTasksList",
+   *     description="show Tasks List",
+   *     tags={"Task"},
    *     @SWG\Parameter(
    *         name="token",
    *         in="query",
