# public/swagger/swagger.json
@@ -57,7 +57,7 @@
                     {
                         "name": "UserId",
                         "in": "query",
-                        "description": "Enter your username or email:",
+                        "description": "Enter your User ID:",
                         "required": true,
                         "type": "string"
                     },
@@ -153,45 +153,6 @@
                         "name": "companyWork",
                         "in": "query",
                         "description": "Your companyWork",
-                        "required": false,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful."
-                    },
-                    "422": {
-                        "description": "Missing Data or Data is incorrect."
-                    }
-                }
-            }
-        },
-        "/api/project/showProjectsList": {
-            "post": {
-                "tags": [
-                    "Project"
-                ],
-                "description": "show Projects List",
-                "parameters": [
-                    {
-                        "name": "token",
-                        "in": "query",
-                        "description": "Enter your token when you logged in:",
-                        "required": true,
-                        "type": "number"
-                    },
-                    {
-                        "name": "name",
-                        "in": "query",
-                        "description": "Enter your project name:",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "urlAvatar",
-                        "in": "query",
-                        "description": "Enter your urlAvatar",
                         "required": false,
                         "type": "string"
                     }
@@ -338,11 +299,36 @@
                         "type": "string"
                     },
                     {
-                        "name": "urlAvatar",
+                        "name": "UserIdList",
                         "in": "query",
                         "description": "Enter User Member List like [1,2,3,...]",
                         "required": true,
                         "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful."
+                    },
+                    "422": {
+                        "description": "Missing Data or Data is incorrect."
+                    }
+                }
+            }
+        },
+        "/api/project/showProjectsList": {
+            "get": {
+                "tags": [
+                    "Project"
+                ],
+                "description": "show Projects List",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Enter your token when you logged in:",
+                        "required": true,
+                        "type": "number"
                     }
                 ],
                 "responses": {
@@ -379,7 +365,7 @@
                     {
                         "name": "name",
                         "in": "query",
-                        "description": "Enter name session:",
+                        "description": "Enter name Session:",
                         "required": true,
                         "type": "string"
                     }
@@ -445,7 +431,240 @@
                 "tags": [
                     "Session"
                 ],
-                "description": "edit Session",
+                "description": "delete Session",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Enter your token when you logged in:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "key",
+                        "in": "query",
+                        "description": "Enter key project get from showProjectsList api:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "SessionId",
+                        "in": "query",
+                        "description": "Enter session ID:",
+                        "required": true,
+                        "type": "number"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful."
+                    },
+                    "422": {
+                        "description": "Missing Data or Data is incorrect."
+                    }
+                }
+            }
+        },
+        "/api/session/showSessionsList": {
+            "get": {
+                "tags": [
+                    "Session"
+                ],
+                "description": "show Sessions List",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Enter your token when you logged in:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "key",
+                        "in": "query",
+                        "description": "Enter key project get from showProjectsList api:",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful."
+                    },
+                    "422": {
+                        "description": "Missing Data or Data is incorrect."
+                    }
+                }
+            }
+        },
+        "/api/task/add": {
+            "post": {
+                "tags": [
+                    "Task"
+                ],
+                "description": "add task",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Enter your token when you logged in:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "key",
+                        "in": "query",
+                        "description": "Enter key project get from showProjectsList api:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "SessionId",
+                        "in": "query",
+                        "description": "Enter SessionId:",
+                        "required": true,
+                        "type": "number"
+                    },
+                    {
+                        "name": "title",
+                        "in": "query",
+                        "description": "Enter Title Task:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "description",
+                        "in": "query",
+                        "description": "Enter description:",
+                        "type": "string"
+                    },
+                    {
+                        "name": "urlAvatar",
+                        "in": "query",
+                        "description": "Enter urlAvatar:",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful."
+                    },
+                    "422": {
+                        "description": "Missing Data or Data is incorrect."
+                    }
+                }
+            }
+        },
+        "/api/task/edit": {
+            "post": {
+                "tags": [
+                    "Task"
+                ],
+                "description": "edit task",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Enter your token when you logged in:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "key",
+                        "in": "query",
+                        "description": "Enter key project get from showProjectsList api:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "SessionId",
+                        "in": "query",
+                        "description": "Enter SessionId:",
+                        "required": true,
+                        "type": "number"
+                    },
+                    {
+                        "name": "TaskId",
+                        "in": "query",
+                        "description": "Enter TaskId:",
+                        "required": true,
+                        "type": "number"
+                    },
+                    {
+                        "name": "title",
+                        "in": "query",
+                        "description": "Enter Title Task:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "description",
+                        "in": "query",
+                        "description": "Enter description:",
+                        "type": "string"
+                    },
+                    {
+                        "name": "urlAvatar",
+                        "in": "query",
+                        "description": "Enter urlAvatar:",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful."
+                    },
+                    "422": {
+                        "description": "Missing Data or Data is incorrect."
+                    }
+                }
+            }
+        },
+        "/api/task/delete": {
+            "post": {
+                "tags": [
+                    "Task"
+                ],
+                "description": "delete task",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Enter your token when you logged in:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "key",
+                        "in": "query",
+                        "description": "Enter key project get from showProjectsList api:",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "TaskId",
+                        "in": "query",
+                        "description": "Enter Task ID:",
+                        "required": true,
+                        "type": "number"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful."
+                    },
+                    "422": {
+                        "description": "Missing Data or Data is incorrect."
+                    }
+                }
+            }
+        },
+        "/api/task/showTasksList": {
+            "get": {
+                "tags": [
+                    "Task"
+                ],
+                "description": "show Tasks List",
                 "parameters": [
                     {
                         "name": "token",
